--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ volumes:
 
 services:
   ddns:
-    restart: unless-stopped
+    restart: no
     build:
       context: ..
       dockerfile: docker/ddns/Dockerfile
