--- a/docker/powerdns/pdns.conf
+++ b/docker/powerdns/pdns.conf
@@ -3,6 +3,7 @@ cache-ttl=0
 loglevel=7
 log-dns-details=yes
 disable-axfr=yes
+pipe-abi-version=1
 
 launch=pipe
-pipe-command=/go/bin/app --domain={{DDNS_DOMAIN}} --soa_fqdn={{DDNS_SOA_DOMAIN}} --redis=redis:6379 {{DDNS_VERBOSE}} backend
+pipe-command=/go/bin/ddns --domain={{DDNS_DOMAIN}} --soa_fqdn={{DDNS_SOA_DOMAIN}} --redis=redis:6379 {{DDNS_VERBOSE}} backend
