--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,42 +1,27 @@
 version: '2'
 
-volumes:
-  ddns:
-
 services:
   ddns:
+    restart: unless-stopped
     build:
       context: ..
       dockerfile: docker/ddns/Dockerfile
-    volumes:
-      - ddns:/go/bin/
-
-  ddns-web:
-    restart: unless-stopped
-    build:
-      context: web/
-      dockerfile: Dockerfile
     depends_on:
       - redis
-    volumes_from:
-      - ddns
     environment:
       DDNS_DOMAIN: d.example.net
+      DDNS_SOA_DOMAIN: soa.example.net
 
-  ddns-powerdns:
+  powerdns:
     restart: unless-stopped
     build:
       context: powerdns/
       dockerfile: Dockerfile
     depends_on:
-      - redis
-    volumes_from:
       - ddns
     environment:
-      DDNS_DOMAIN: d.example.net
-      DDNS_SOA_DOMAIN: soa.example.net
-      DDNS_VERBOSE: --verbose
+      PDNS_REMOTE_HTTP_HOST: "ddns:8080"
 
   redis:
     restart: unless-stopped
-    image: redis:latest
+    image: redis:4-alpine
