--- a/docker/powerdns/Dockerfile
+++ b/docker/powerdns/Dockerfile
@@ -2,11 +2,11 @@ FROM buildpack-deps:jessie-scm
 MAINTAINER Philipp Böhm <philipp@pboehm.org>
 
 # the setup procedure according to https://repo.powerdns.com/ (Debian 8 Jessie)
-RUN echo "deb http://repo.powerdns.com/debian jessie-auth-40 main" > /etc/apt/sources.list.d/pdns.list \
+RUN echo "deb http://repo.powerdns.com/debian jessie-auth-41 main" > /etc/apt/sources.list.d/pdns.list \
 	&& echo "Package: pdns-*\nPin: origin repo.powerdns.com\nPin-Priority: 600\n" >> /etc/apt/preferences.d/pdns \
 	&& curl https://repo.powerdns.com/FD380FBB-pub.asc | apt-key add - \
 	&& apt-get -y update \
-	&& apt-get install -y pdns-server pdns-backend-pipe \
+	&& apt-get install -y pdns-server pdns-backend-remote \
 	&& rm -rf /var/lib/apt/lists/*
 
 COPY pdns.conf /etc/powerdns/pdns.conf
