--- a/docker/powerdns/pdns.conf
+++ b/docker/powerdns/pdns.conf
@@ -5,4 +5,5 @@ log-dns-details=yes
 disable-axfr=yes
 
 launch=remote
+remote-dnssec=no
 remote-connection-string=http:url=http://{{PDNS_REMOTE_HTTP_HOST}}/dnsapi
