--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - redis
     environment:
       DDNS_DOMAIN: d.example.net
-      DDNS_SOA_DOMAIN: soa.example.net
+      DDNS_SOA_DOMAIN: ns.example.net
+      DDNS_REDIS_HOST: redis:6379
 
   powerdns:
     restart: unless-stopped
