--- a/docker/docker-compose.override.yml.sample
+++ b/docker/docker-compose.override.yml.sample
@@ -3,8 +3,8 @@ version: '2'
 services:
   ddns:
     environment:
-      DDNS_DOMAIN: d.example.net                      # <<< CHANGE THIS
-      DDNS_SOA_DOMAIN: ns.example.net                 # <<< CHANGE THIS
+      DDNS_DOMAIN: d.example.net                      # <<< ADJUST DOMAIN
+      DDNS_SOA_DOMAIN: ddns.example.net               # <<< ADJUST DOMAIN
 
   powerdns:
     ports:
@@ -12,7 +12,7 @@ services:
 
   redis:
     volumes:
-      - "${HOME}/ddns-redis:/data"
+      - "/root/ddns-redis:/data"                      # <<< ADJUST LOCAL PATH
 
   caddy:
     restart: unless-stopped
@@ -21,11 +21,11 @@ services:
       - ddns
     environment:
       DDNS_FRONTEND_HOST: ddns:8080
-      DDNS_CADDY_DOMAIN: ddns.example.net             # <<< CHANGE THIS
-      DDNS_CADDY_TLS_EMAIL: changeme@example.net      # <<< CHANGE THIS
+      DDNS_CADDY_DOMAIN: ddns.example.net             # <<< ADJUST DOMAIN
+      DDNS_CADDY_TLS_EMAIL: changeme@example.net      # <<< INSERT EMAIL
     volumes:
       - "${PWD}/caddy/Caddyfile:/etc/Caddyfile"
-      - "${HOME}/ddns-caddy:/root/.caddy"
+      - "/root/ddns-caddy:/root/.caddy"               # <<< ADJUST LOCAL PATH
     ports:
       - "80:80"
       - "443:443"
