Add DDNS_EXPIRATION_DAYS env variable

--- a/docker/ddns/Dockerfile
+++ b/docker/ddns/Dockerfile
@@ -9,5 +9,10 @@ RUN GO111MODULE=on go get -d -v ./...
 RUN GO111MODULE=on go install -v ./...
 
 ENV GIN_MODE release
+ENV DDNS_EXPIRATION_DAYS 10
 
-CMD /go/bin/ddns --domain=${DDNS_DOMAIN} --soa_fqdn=${DDNS_SOA_DOMAIN} --redis=${DDNS_REDIS_HOST}
+CMD /go/bin/ddns \
+    --domain=${DDNS_DOMAIN} \
+    --soa_fqdn=${DDNS_SOA_DOMAIN} \
+    --redis=${DDNS_REDIS_HOST} \
+    --expiration-days=${DDNS_EXPIRATION_DAYS}
