--- a/docker/docker-compose.override.yml.sample
+++ b/docker/docker-compose.override.yml.sample
@@ -5,6 +5,7 @@ services:
     environment:
       DDNS_DOMAIN: d.example.net                      # <<< ADJUST DOMAIN
       DDNS_SOA_DOMAIN: ddns.example.net               # <<< ADJUST DOMAIN
+      DDNS_EXPIRATION_DAYS: 10
 
   powerdns:
     ports:
