Allow turning on --verbose mode by environment variable $DEBUG_MODE
- Run application by an entrypoint.sh script to allow more debug options

--- a/docker/ddns/Dockerfile
+++ b/docker/ddns/Dockerfile
@@ -2,6 +2,7 @@ FROM golang:alpine
 
 RUN apk add --no-cache git
 
+COPY docker/ddns/entrypoint.sh /entrypoint.sh
 WORKDIR /go/src/github.com/pboehm/ddns
 COPY . .
 
@@ -11,8 +12,4 @@ RUN GO111MODULE=on go install -v ./...
 ENV GIN_MODE release
 ENV DDNS_EXPIRATION_DAYS 10
 
-CMD /go/bin/ddns \
-    --domain=${DDNS_DOMAIN} \
-    --soa_fqdn=${DDNS_SOA_DOMAIN} \
-    --redis=${DDNS_REDIS_HOST} \
-    --expiration-days=${DDNS_EXPIRATION_DAYS}
+ENTRYPOINT ["/entrypoint.sh"]
